# mhrs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  rust.yml
src/: analyzer.rs  caller.rs  cli.rs  counter.rs  definition.rs  main.rs  observer.rs  panel.rs  parameters.rs  profile.rs  read.rs  result.rs  thresholds.rs
testdata/: dummy-result.json  mwgfour-p1-profile.json  mwgfour-p1.bam  mwgfour-p1.bam.bai  mwgfour-p1p3-profile.json  mwgfour-p1p3.bam  mwgfour-p1p3.bam.bai  mwgfour-p2-profile.json  mwgfour-p2.bam  mwgfour-p2.bam.bai  mwgfour-thresholds.csv  mwgfour.csv  nimathree.csv  twomh.csv
