[package]
name = "mhrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
counter = "0.5.*"
csv = "1.3.*"
idna = "1.0.3"
itertools = "0.10.*"
rust-htslib = "0.46.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
